@@ -91,6 +91,9 @@ $access['table'][19]['allow_reg']	= '^customergroup$';
 $access['table'][20]['name']		= trans('nodes to groups assignment');
 $access['table'][20]['allow_reg']	= '^nodegroup$';
 
+$access['table'][21]['name']		= trans('hide summaries');
+$access['table'][21]['privillege']	= 'hide_summaries';
+
 $access['table'][253]['name']		= trans('users edition and addition forbidden');
 $access['table'][253]['deny_reg']	= '^(user(add|del|edit|passwd))$';
 
